# qdrantQuery

./: .gitignore  app.py  async_qdrant_test.py  dev.env  layout_parser_test.py  main.py  pyproject.toml
api/: __init__.py  dependencies.py  mw.py
api/v1/: api_route.py
api/v1/endpoints/: chat.py  user.py
config/: settings_database.py  settings_vector.py
core/: database.py  dependencies.py  logging.py  loggings.py  middleware.py  middlewares.py  security.py  settings.py  trace_id.py  trace_id2.py
docker/: kafka.yaml  zookeeper.yaml
k8s/: kafka.yaml  kafka2.yaml  pv.yaml  zookeeper.yaml
models/: add_vector.py  base_model.py  user.py
repositories/: add_vector.py  base.py  manager.py  user_repository.py  vector_repository.py
schemas/: sample.py  user_schema.py
services/: hybrid_bm25.py  hybrid_insert.py  kafka.py  layout_parser_test.py  query.py  retry_parser2.py  retry_parsing.py  runnable_ch.py  streamlit_openai4o_simple.py  vdb_client_conn_test.py
