[project]
name = "qdrantdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.7",
    "pymupdf4llm>=0.0.26",
    "qdrant-client>=1.14.3",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
