[project]
name = "qdrantdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncmy>=0.2.10",
    "fastapi>=0.116.0",
    "icecream>=2.1.5",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf4llm>=0.0.26",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.14.3",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "passlib>=1.7.4",
    "fastembed>=0.7.1",
    "starlette-context>=0.4.0",
    "cryptography>=45.0.5",
    "confluent-kafka>=2.11.0",
    "langchain>=0.3.27",
]
